@@ -3,6 +3,7 @@ Version 0.2.9 (2018-06-)
 - Open file by URL (Issue #95) @danielperna84
 - Added ENFORCE_BASEPATH option (Issue #68) @danielperna84
 - Cosmetic fix for scaled viewports @danielperna84
+- Added search-function for entities (Issue #99) @danielperna84
 
 Version 0.2.8 (2018-04-23)
 - Updated CDN libraries @jmart518
